--- a/BountyOnBurn.properties
+++ b/BountyOnBurn.properties
@@ -2,19 +2,25 @@ classname				= org.jubaroo.mods.bountyonburn.Initiator
 classpath				= BountyOnBurn.jar
 sharedClassLoader       = true
 
-# How much coin to deposit into the bank account of the player(in irons)
-corpseBounty = 500
+# How much coin to deposit into the bank account of the player(in irons). Set to 0 to disable giving coin
+coinBounty = 500
+
+# How much coin to deposit into the bank account of the player(in irons).  Set to 0 to disable giving karma
+karmaBounty = 100
 
 # The message to be displayed to the player upon completing the action
 bountyMessage = "Iron coin has been deposited into your bank account for burning the corpse."
 
 # How long the action will take to complete(in seconds)
-actionTime = 5
+actionTime = 5.0
 
 # Control what the fire effect looks like
-# true = Magical looking larger fire
-# false = Normal looking fire
+# true = More magical looking, larger fire
+# false = Normal looking, smaller fire
 magicFire = true
+
+# Toggle if player can use forge/oven/smelter/kiln/campfire/fireplace/charcoal pile
+burnInForges = true
 
 # Toggle logging info for server log
 debug = true
