--- a/BountyOnBurn.properties
+++ b/BountyOnBurn.properties
@@ -2,6 +2,15 @@ classname				= org.jubaroo.mods.bountyonburn.Initiator
 classpath				= BountyOnBurn.jar
 sharedClassLoader       = true
 
+# Toggle if players have the separate action to burn all items on the corpse as well as the corpse itself
+burnAllAction = true
+
+# Toggle whether burning of unique corpses are enabled
+burnUniques = false
+
+# Toggle whether burning of dragon corpses are enabled
+burnDragons = false
+
 # How much coin to deposit into the bank account of the player(in irons). Set to 0 to disable giving coin
 coinBounty = 500
 
@@ -9,7 +18,7 @@ coinBounty = 500
 karmaBounty = 100
 
 # The message to be displayed to the player upon completing the action
-bountyMessage = "Iron coin has been deposited into your bank account for burning the corpse."
+bountyMessage = You have been given karma and coin for burning the corpse.
 
 # How long the action will take to complete(in seconds)
 actionTime = 5
