Add property options for defining bounty based on corpse type.

--- a/BountyOnBurn.properties
+++ b/BountyOnBurn.properties
@@ -11,8 +11,6 @@ burnUniques = false
 # Toggle whether burning of dragon corpses are enabled
 burnDragons = false
 
-# How much coin to deposit into the bank account of the player(in irons). Set to 0 to disable giving coin
-coinBounty = 500
 
 # How much coin to deposit into the bank account of the player(in irons).  Set to 0 to disable giving karma
 karmaBounty = 100
@@ -33,3 +31,98 @@ burnInForges = true
 
 # Toggle logging info for server log
 debug = true
+
+# Multiplier for the set bounties. Set to 0 to disable giving coin
+coinBountyMultiplier = 1.0f
+
+# Used if for some reason a creature isn't identified, in iron.
+Default_Bounty=100
+
+# Set bounty based on corpse type, in iron.
+
+Cow_Brown_Bounty=100
+Wolf_Black_Bounty=300
+Troll_Bounty=1000
+Bear_Brown_Bounty=600
+Rat_Large_Bounty=200
+Lion_Mountain_Bounty=300
+Cat_Wild_Bounty=200
+Dragon_Red_Bounty=10000
+Drake_Green_Bounty=10000
+Drake_Black_Bounty=10000
+Drake_White_Bounty=10000
+Forest_Giant_Bounty=10000
+Unicorn_Bounty=300
+Cyclops_Bounty=10000
+Goblin_Bounty=300
+Spider_Mother_Bounty=10000
+Spider_Bounty=500
+Goblin_Leader_Bounty=10000
+Troll_King_Bounty=10000
+Boar_Fo_Bounty=700
+Anaconda_Bounty=1000
+Gorilla_Magranon_Bounty=700
+Hyena_Libila_Bounty=700
+Bear_Black_Bounty=500
+Cave_Bug_Bounty=250
+Pig_Bounty=100
+Hen_Bounty=50
+Chicken_Bounty=50
+Bull_Bounty=150
+Calf_Bounty=50
+Dog_Bounty=150
+Rooster_Bounty=50
+Deer_Bounty=100
+Pheasant_Bounty=50
+Lava_Spider_Bounty=800
+Lava_Creature_Bounty=800
+Crocodile_Bounty=800
+Scorpion_Bounty=600
+Horse_Bounty=150
+Foal_Bounty=50
+Sea_Serpent_Bounty=10000
+Shark_Huge_Bounty=500
+Bison_Bounty=300
+Hell_Horse_Bounty=250
+Hell_Hound_Bounty=800
+Hell_Scorpion_Bounty=800
+Dragon_Black_Bounty=10000
+Dragon_Green_Bounty=10000
+Dragon_Blue_Bounty=10000
+Dragon_White_Bounty=10000
+Seal_Bounty=400
+Tortoise_Bounty=400
+Crab_Bounty=400
+Sheep_Bounty=100
+Blue_Whale_Bounty=800
+Seal_Cub_Bounty=200
+Dolphin_Bounty=200
+Octopus_Bounty=200
+Lamb_Bounty=50
+Ram_Bounty=100
+Spider_Fog_Bounty=800
+
+#Multiplier for Fierce creatures.
+Fierce_StatusMultiplier=1.5f
+#Multiplier for Angry creatures.
+Angry_StatusMultiplier=1.4f
+#Multiplier for Raging creatures.
+Raging_StatusMultiplier=1.6f
+#Multiplier for Slow creatures.
+Slow_StatusMultiplier=0.95f
+#Multiplier for Alert creatures.
+Alert_StatusMultiplier=1.2f
+#Multiplier for Greenish creatures.
+Greenish_StatusMultiplier=1.7f
+#Multiplier for Lurking creatures.
+Lurking_StatusMultiplier=1.1f
+#Multiplier for Sly creatures.
+Sly_StatusMultiplier=1.0f
+#Multiplier for Hardened creatures.
+Hardened_StatusMultiplier=1.3f
+#Multiplier for Scared creatures.
+Scared_StatusMultiplier=0.85f
+#Multiplier for Diseased creatures.
+Diseased_StatusMultiplier=0.9f
+#Multiplier for Champion creatures.
+Champion_StatusMultiplier=1.7f
