Rework creature names in properties to use their actual names.

--- a/BountyOnBurn.properties
+++ b/BountyOnBurn.properties
@@ -39,68 +39,61 @@ coinBountyMultiplier = 1.0f
 Default_Bounty=100
 
 # Set bounty based on corpse type, in iron.
-
-Cow_Brown_Bounty=100
-Wolf_Black_Bounty=300
-Troll_Bounty=1000
-Bear_Brown_Bounty=600
-Rat_Large_Bounty=200
-Lion_Mountain_Bounty=300
-Cat_Wild_Bounty=200
-Dragon_Red_Bounty=10000
-Drake_Green_Bounty=10000
-Drake_Black_Bounty=10000
-Drake_White_Bounty=10000
-Forest_Giant_Bounty=10000
-Unicorn_Bounty=300
-Cyclops_Bounty=10000
-Goblin_Bounty=300
-Spider_Mother_Bounty=10000
-Spider_Bounty=500
-Goblin_Leader_Bounty=10000
-Troll_King_Bounty=10000
-Boar_Fo_Bounty=700
-Anaconda_Bounty=1000
-Gorilla_Magranon_Bounty=700
-Hyena_Libila_Bounty=700
-Bear_Black_Bounty=500
-Cave_Bug_Bounty=250
-Pig_Bounty=100
-Hen_Bounty=50
-Chicken_Bounty=50
-Bull_Bounty=150
-Calf_Bounty=50
-Dog_Bounty=150
-Rooster_Bounty=50
-Deer_Bounty=100
-Pheasant_Bounty=50
-Lava_Spider_Bounty=800
-Lava_Creature_Bounty=800
-Crocodile_Bounty=800
-Scorpion_Bounty=600
-Horse_Bounty=150
-Foal_Bounty=50
-Sea_Serpent_Bounty=10000
-Shark_Huge_Bounty=500
-Bison_Bounty=300
-Hell_Horse_Bounty=250
-Hell_Hound_Bounty=800
-Hell_Scorpion_Bounty=800
-Dragon_Black_Bounty=10000
-Dragon_Green_Bounty=10000
-Dragon_Blue_Bounty=10000
-Dragon_White_Bounty=10000
-Seal_Bounty=400
-Tortoise_Bounty=400
-Crab_Bounty=400
-Sheep_Bounty=100
-Blue_Whale_Bounty=800
-Seal_Cub_Bounty=200
-Dolphin_Bounty=200
-Octopus_Bounty=200
-Lamb_Bounty=50
-Ram_Bounty=100
-Spider_Fog_Bounty=800
+# For creatures with spaces in their name, use "_" to represent the space.
+# The mod searches the corpse name for the specified creatures below.
+# If a creature is not defined below, the default bounty is used.
+# The creature name must be suffixed with "_bounty"
+anaconda_bounty=1000
+bison_bounty=300
+black_bear_bounty=500
+black_wolf_bounty=300
+blue_whale_bounty=800
+brown_bear_bounty=600
+bull_bounty=150
+calf_bounty=50
+cave_bug_bounty=250
+chicken_bounty=50
+cobra_king_bounty=10000
+cow_bounty=100
+crab_bounty=400
+crocodile_bounty=800
+deer_bounty=100
+dog_bounty=150
+dolphin_bounty=200
+donkey_bounty=100
+foal_bounty=50
+fog_spider_bounty=800
+goblin_bounty=300
+hell_horse_bounty=250
+hell_hound_bounty=800
+hell_scorpious=800
+hen_bounty=50
+horse_bounty=150
+huge_spider_bounty=500
+lamb_bounty=50
+large_rat_bounty=200
+lava_fiend_bounty=800
+lava_spider_bounty=800
+mountain_gorilla_bounty=700
+mountain_lion_bounty=300
+mule_bounty=150
+octopus_bounty=200
+pheasant_bounty=50
+pig_bounty=100
+rabid_hyena_bounty=700
+ram_bounty=100
+rooster_bounty=100
+scorpion_bounty=600
+sea_serpent_bounty=10000
+seal_bounty=400
+shark_bounty=500
+sheep_bounty=150
+tortoise_bounty=400
+troll_bounty=1000
+unicorn_bounty=300
+wild_boar_bounty=700
+wild_cat_bounty=200
+worg_bounty=700
 
 #Multiplier for Fierce creatures.
 Fierce_StatusMultiplier=1.5f
