Fix scorpious bounty and default bounty.

--- a/BountyOnBurn.properties
+++ b/BountyOnBurn.properties
@@ -36,7 +36,7 @@ debug = true
 coinBountyMultiplier = 1.0f
 
 # Used if for some reason a creature isn't identified, in iron.
-Default_Bounty=100
+bountyDefault=100
 
 # Set bounty based on corpse type, in iron.
 # For creatures with spaces in their name, use "_" to represent the space.
@@ -66,7 +66,7 @@ fog_spider_bounty=800
 goblin_bounty=300
 hell_horse_bounty=250
 hell_hound_bounty=800
-hell_scorpious=800
+hell_scorpious_bounty=800
 hen_bounty=50
 horse_bounty=150
 huge_spider_bounty=500
