Add uniques and statuses to properties.

--- a/BountyOnBurn.properties
+++ b/BountyOnBurn.properties
@@ -1,4 +1,4 @@
-classname				= org.jubaroo.mods.bountyonburn.Initiator
+classname				= org.kraetzin.mods.bountyonburn.Initiator
 classpath				= BountyOnBurn.jar
 sharedClassLoader       = true
 
@@ -95,27 +95,40 @@ wild_boar_bounty=700
 wild_cat_bounty=200
 worg_bounty=700
 
+# Uniques
+forest_giant_bounty=15000
+goblin_leader_bounty=15000
+kyklops_bounty=15000
+troll_king_bounty=15000
+dragon_hatchling_bounty=20000
+dragon_bounty=20000
+
+# Set multipliers based on creature statuses
+# The mod searches the corpse name for the specified statuses below.
+# The status name must be suffixed with "_status"
 #Multiplier for Fierce creatures.
-Fierce_StatusMultiplier=1.5f
+fierce_status=1.5f
 #Multiplier for Angry creatures.
-Angry_StatusMultiplier=1.4f
+angry_status=1.4f
 #Multiplier for Raging creatures.
-Raging_StatusMultiplier=1.6f
+raging_status=1.6f
 #Multiplier for Slow creatures.
-Slow_StatusMultiplier=0.95f
+slow_status=1.05f
 #Multiplier for Alert creatures.
-Alert_StatusMultiplier=1.2f
+alert_status=1.2f
 #Multiplier for Greenish creatures.
-Greenish_StatusMultiplier=1.7f
+greenish_status=1.7f
 #Multiplier for Lurking creatures.
-Lurking_StatusMultiplier=1.1f
+lurking_status=1.1f
 #Multiplier for Sly creatures.
-Sly_StatusMultiplier=1.0f
+sly_status=1.0f
 #Multiplier for Hardened creatures.
-Hardened_StatusMultiplier=1.3f
+hardened_status=1.3f
 #Multiplier for Scared creatures.
-Scared_StatusMultiplier=0.85f
+scared_status=1.15f
 #Multiplier for Diseased creatures.
-Diseased_StatusMultiplier=0.9f
+diseased_status=0.9f
 #Multiplier for Champion creatures.
-Champion_StatusMultiplier=1.7f
+champion_status=1.7f
+#Multiplier for Venerable creatures.
+venerable_status=1.15f
