Ensure that creature names and statuses are stored in lower case.

--- a/BountyOnBurn.properties
+++ b/BountyOnBurn.properties
@@ -2,6 +2,7 @@ classname				= org.kraetzin.mods.bountyonburn.Initiator
 classpath				= BountyOnBurn.jar
 sharedClassLoader       = true
 
+debug = true
 # Toggle if players have the separate action to burn all items on the corpse as well as the corpse itself
 burnAllAction = true
 
@@ -19,7 +20,7 @@ karmaBounty = 100
 bountyMessage = You have been given karma and coin for burning the corpse.
 
 # How long the action will take to complete(in seconds)
-actionTime = 5
+actionTime = 4
 
 # Control what the fire effect looks like
 # true = More magical looking, larger fire
