Improve properties documentation.

--- a/BountyOnBurn.properties
+++ b/BountyOnBurn.properties
@@ -12,11 +12,11 @@ burnUniques = false
 # Toggle whether burning of dragon corpses are enabled
 burnDragons = false
 
-
-# How much coin to deposit into the bank account of the player(in irons).  Set to 0 to disable giving karma
+# How much karma to award. Set to 0 to disable giving karma.
 karmaBounty = 100
 
 # The message to be displayed to the player upon completing the action
+# Note: This is currently hardcoded, and unused.
 bountyMessage = You have been given karma and coin for burning the corpse.
 
 # How long the action will take to complete(in seconds)
@@ -130,6 +130,6 @@ scared_status=1.15f
 #Multiplier for Diseased creatures.
 diseased_status=0.9f
 #Multiplier for Champion creatures.
-champion_status=1.7f
+champion_status=1.9f
 #Multiplier for Venerable creatures.
 venerable_status=1.15f
